# small-lp-solver

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  main.hpp  test.cpp  test.hpp
problems/: problem1.txt  problem2.txt  problem_format.txt
solvers/: CMakeLists.txt  primal_tableau.cpp  primal_tableau.hpp
utils/: CMakeLists.txt  formatter.cpp  formatter.hpp
